--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ buildscript {
     repositories {
         mavenCentral()
         maven {
+            url uri('/Users/imurluck/mavenLocal/')
+        }
+        maven {
             url 'http://maven.aliyun.com/nexus/content/groups/public/'
         }
         maven {
@@ -19,8 +22,13 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.imurluck.apm:plugin:1.0.0-SNAPSHOT"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+    }
+    configurations.all {
+        resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 }
 
