--- a/imurluck-apm-plugin/build.gradle
+++ b/imurluck-apm-plugin/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
+apply plugin: 'maven'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -32,5 +33,17 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
+    }
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: uri('/Users/imurluck/mavenLocal/'))
+            pom.groupId = "com.imurluck.apm"
+            pom.version = "1.0.0-SNAPSHOT"
+            pom.artifactId = "plugin"
+            pom.packaging = "jar"
+        }
     }
 }
